[tool.poetry]
name = "crisis-help-agent"
version = "0.0.1"
authors = [
    "maoli"
]
description = "A user new agent template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "crisis_help_agent" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"

[tool.poetry.scripts]
crisis-help-agent = "crisis_help_agent.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

